# examples

./: README.md
entity-resolution/: README.md
entity-resolution/scripts/: pyproject.toml
entity-resolution/scripts/scripts/: plot-distances.py  recall.py
entity-resolution/templates/: authors.handlebars  record.handlebars  title.handlebars  venue.handlebars  year.handlebars
